@@ -202,26 +202,6 @@ export const WOOCOMMERCE_SETTINGS_PRODUCTS_UPDATE_REQUEST_FAILURE =
 	'WOOCOMMERCE_SETTINGS_PRODUCTS_UPDATE_REQUEST_FAILURE';
 export const WOOCOMMERCE_SETTINGS_PRODUCTS_UPDATE_REQUEST_SUCCESS =
 	'WOOCOMMERCE_SETTINGS_PRODUCTS_UPDATE_REQUEST_SUCCESS';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_CLEAR_COMPLETED_NOTIFICATION =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_CLEAR_COMPLETED_NOTIFICATION';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_CLEAR_ERROR =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_CLEAR_ERROR';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DETAILS_REQUEST =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DETAILS_REQUEST';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DETAILS_UPDATE =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DETAILS_UPDATE';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DEAUTHORIZE =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DEAUTHORIZE';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DEAUTHORIZE_COMPLETE =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DEAUTHORIZE_COMPLETE';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_OAUTH_INIT =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_DEAUTHORIZE_OAUTH_INIT';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_OAUTH_INIT_COMPLETE =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_OAUTH_INIT_COMPLETE';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_OAUTH_CONNECT =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_OAUTH_CONNECT';
-export const WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_OAUTH_CONNECT_COMPLETE =
-	'WOOCOMMERCE_SETTINGS_STRIPE_CONNECT_ACCOUNT_OAUTH_CONNECT_COMPLETE';
 export const WOOCOMMERCE_SETTINGS_TAX_BATCH_REQUEST = 'WOOCOMMERCE_SETTINGS_TAX_BATCH_REQUEST';
 export const WOOCOMMERCE_SETTINGS_TAX_BATCH_REQUEST_SUCCESS =
 	'WOOCOMMERCE_SETTINGS_TAX_BATCH_REQUEST_SUCCESS';
